	Fix compilation error of pst3 in Solaris 8
	Fix check_radius returning OK on unexpected results (Craig Leres - #2911752)
	Fix translations when extra-opts aren't enabled (Jan Wagner - #2832884)
	Fix parsing of multi-line strings in check_snmp (broken in 1.4.14) and enhance output in such case (#2832451)
	Fix detection of pst3 64-bit compile flags with Sun CC
	WARNINGS
	Updated developer documentation to say that performance labels should not have an equals sign or
	single quote in the label
	check_http 1.4.14 introduced SSL SNI support - you now have to enable it explicitly with "--sni"
	check_snmp -l label option is also used for the performance label. This could change history from previous uses

1.4.14 16th September 2009
	check_http has options to specify the HTTP method (#2155152)
	check_users thresholds were not working exactly as documented (>= rather than >)
	Updated tinderbox_build script to point to new tinderbox server
	check_ifoperstatus -n flag now works as expected (sf.net #1569488)
	check_ifoperstatus now supports ifType based lookup for ifIndex
	check_ups now sends a LOGOUT string (debian bug #387001)
	Extra-opts (C plugins) now allows both '#' and ';' for comments (like N::P)
	Extra-opts (C plugins) does not allow trailing comments anymore (like N::P)
	Fixed dependency issue on libtap when ./configure --enable-libtap used. Warning: will install libtap
	Fixed segfault in extra-opts under some circumstance when reading multiple sections
	Fix long options parsing in check_disk, check_dns, check_mrtg, check_mrtgtraf and check_tcp
	Add missing long options for check_nt (for use with extra-opts)
	check_icmp now reports min and max round trip time perfdata (Steve Rader)
	Fixed check_http bug where additional headers with redirection caused a segfault (Dieter Van de Walle - 2089159)
	check_disk: make autofs mount paths specified with -p before we determine the mount list (Erik Welch)