@@ -29,6 +29,7 @@ This file documents the major additions and syntax changes between releases.
 	Fix translations when extra-opts aren't enabled (Jan Wagner - #2832884)
 	Fix parsing of multi-line strings in check_snmp (broken in 1.4.14) and enhance output in such case (#2832451)
 	Fix detection of pst3 64-bit compile flags with Sun CC
+	Fix cmd_run overwriting the environment, which would break some commands that needed it
 	WARNINGS
 	Updated developer documentation to say that performance labels should not have an equals sign or
 	single quote in the label
